@@ -2,7 +2,6 @@ package com.jq.findapp.service.backend;
 
 import java.math.BigInteger;
 import java.net.URI;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.sql.Timestamp;
 import java.text.SimpleDateFormat;
@@ -95,8 +94,11 @@ public class RssService {
 	}
 
 	private class ImportFeed {
-		private final Pattern imageRegex = Pattern.compile("\\<article.*?\\<figure.*?\\<img .*?src=\\\"(.*?)\\\"");
-		private final Pattern imageRegex2 = Pattern.compile("\\<div.*?\\<picture.*?\\<img .*?src=\\\"(.*?)\\\"");
+		private final Pattern[] imageRegex = new Pattern[] {
+				Pattern.compile("\\<meta.*?property=\"og:image\".*?content=\\\"(.*?)\\\""),
+				Pattern.compile("\\<article.*?\\<figure.*?\\<img .*?src=\\\"(.*?)\\\""),
+				Pattern.compile("\\<div.*?\\<picture.*?\\<img .*?src=\\\"(.*?)\\\"")
+		};
 		private final SimpleDateFormat dateParser = new SimpleDateFormat("EEE, dd MMM yyyy HH:mm:ss Z", Locale.ROOT);
 		private final SimpleDateFormat dateParser2 = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSXXX", Locale.ROOT);
 		private final Set<String> urls = new HashSet<>();
@@ -104,7 +106,8 @@ public class RssService {
 		private String run(final JsonNode json, final BigInteger clientId) {
 			try {
 				final String url = json.get("url").asText();
-				final ArrayNode rss = (ArrayNode) new XmlMapper().readTree(new URL(url)).findValues("item").get(0);
+				final ArrayNode rss = (ArrayNode) new XmlMapper().readTree(URI.create(url).toURL()).findValues("item")
+						.get(0);
 				if (rss == null || rss.size() == 0)
 					return "";
 				final QueryParams params = new QueryParams(Query.misc_listNews);
@@ -115,33 +118,29 @@ public class RssService {
 				long lastPubDate = 0;
 				Timestamp first = new Timestamp(System.currentTimeMillis());
 				final boolean addDescription = json.has("description") && json.get("description").asBoolean();
-				final String descriptionPostfix = json.has("descriptionPostfix")
-						? "\n" + json.get("descriptionPostfix").asText()
-						: null;
+				final String source = json.has("source") ? json.get("source").asText() : null;
 				for (int i = 0; i < rss.size(); i++) {
 					try {
 						final ClientNews clientNews = this.createNews(params, rss.get(i), addDescription, clientId, url,
-								descriptionPostfix);
-						if (clientNews != null) {
+								source);
+						if (clientNews != null && clientNews.getImage() != null) {
 							if (clientNews.getPublish().getTime() > lastPubDate)
 								chonological = false;
 							else
 								lastPubDate = clientNews.getPublish().getTime();
-							if (clientNews.getImage() != null) {
-								if (clientNews.getId() == null)
-									count++;
-								clientNews.setLatitude((float) json.get("latitude").asDouble());
-								clientNews.setLongitude((float) json.get("longitude").asDouble());
-								final boolean b = json.get("publish").asBoolean() && clientNews.getId() == null;
-								RssService.this.repository.save(clientNews);
-								if (first.getTime() > clientNews.getPublish().getTime())
-									first = clientNews.getPublish();
-								this.urls.add(clientNews.getUrl());
-								if (b)
-									RssService.this.externalService.publishOnFacebook(clientId,
-											clientNews.getDescription(),
-											"/rest/marketing/news/" + clientNews.getId());
-							}
+							if (clientNews.getId() == null)
+								count++;
+							clientNews.setLatitude((float) json.get("latitude").asDouble());
+							clientNews.setLongitude((float) json.get("longitude").asDouble());
+							final boolean b = json.get("publish").asBoolean() && clientNews.getId() == null;
+							RssService.this.repository.save(clientNews);
+							if (first.getTime() > clientNews.getPublish().getTime())
+								first = clientNews.getPublish();
+							this.urls.add(clientNews.getUrl());
+							if (b)
+								RssService.this.externalService.publishOnFacebook(clientId,
+										clientNews.getDescription() + (Strings.isEmpty(source) ? "" : "\n" + source),
+										"/rest/marketing/news/" + clientNews.getId());
 						}
 					} catch (final Exception ex) {
 						this.addFailure(ex, url);
@@ -180,7 +179,7 @@ public class RssService {
 		}
 
 		private ClientNews createNews(final QueryParams params, final JsonNode rss, final boolean addDescription,
-				final BigInteger clientId, final String url, final String descriptionPostfix) throws Exception {
+				final BigInteger clientId, final String url, final String source) throws Exception {
 			String uid = null;
 			if (rss.has("link"))
 				uid = rss.get("link").asText().trim();
@@ -190,16 +189,11 @@ public class RssService {
 					uid = rss.get("guid").get("").asText().trim();
 			}
 			final int max = 1000;
-			String description = Strings.sanitize(rss.get("title").asText() +
+			final String description = Strings.sanitize(rss.get("title").asText() +
 					(addDescription && rss.has("description")
 							? "\n" + rss.get("description").asText()
 							: ""),
 					max).trim();
-			if (!Strings.isEmpty(descriptionPostfix)) {
-				if (description.length() + descriptionPostfix.length() > max)
-					description = description.substring(0, max - descriptionPostfix.length() - 3) + "...";
-				description += descriptionPostfix;
-			}
 			params.setSearch("clientNews.url='" + uid + "' and clientNews.clientId=" + clientId);
 			Result result = RssService.this.repository.list(params);
 			final ClientNews clientNews;
@@ -215,6 +209,7 @@ public class RssService {
 						(BigInteger) result.get(0).get("clientNews.id"));
 				clientNews.historize();
 			}
+			clientNews.setSource(source);
 			clientNews.setClientId(clientId);
 			clientNews.setDescription(description);
 			clientNews.setUrl(uid);
@@ -229,15 +224,15 @@ public class RssService {
 			else {
 				final String html = IOUtils.toString(new URI(uid), StandardCharsets.UTF_8)
 						.replace('\r', ' ').replace('\n', ' ');
-				Matcher matcher = this.imageRegex.matcher(html);
 				String s = null;
-				boolean found = matcher.find();
-				if (!found) {
-					matcher = this.imageRegex2.matcher(html);
-					found = matcher.find();
+				for (Pattern pattern : imageRegex) {
+					final Matcher matcher = pattern.matcher(html);
+					if (matcher.find()) {
+						s = matcher.group(1);
+						break;
+					}
 				}
-				if (found) {
-					s = matcher.group(1);
+				if (s != null) {
 					if (s.startsWith("/"))
 						s = url.substring(0, url.indexOf("/", 10)) + s;
 					clientNews.setImage(EntityUtil.getImage(s, EntityUtil.IMAGE_SIZE, 200));
